--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,14 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
         </dependency>
+        <!-- TestNG for test classes -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.8.0</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <!-- Lombok (optional, for getters/setters) -->
         <dependency>
