--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,18 @@ spring.jpa.properties.hibernate.format_sql=true
 # ===============================
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# MySQL Database
+spring.datasource.url=jdbc:mysql://localhost:3306/dynamic_pricing_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=yourpassword
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# JWT Secret
+jwt.secret=MySuperSecretKey
+jwt.validity=3600000
+
+# Swagger
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui/index.html
