--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,13 @@
-# ===============================
-# SERVER
-# ===============================
-server.port=9002
+spring.application.name=demo
+server.port=9001
+server.forward-headers-strategy=framework
 
-# ===============================
-# DATASOURCE (H2 - IN MEMORY)
-# ===============================
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/sticket?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
-# JPA / HIBERNATE
-# ===============================
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# ===============================
-# H2 CONSOLE
-# ===============================
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# ===============================
-# JWT
-# ===============================
-jwt.secret=MySuperSecretKey
-jwt.validity=3600000
-
-# ===============================
-# SWAGGER
-# ===============================
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui/index.html
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
